Update dependencies, container updates, remove kapt.